# Graphic_Final_Project

./: .gitignore  CMakeLists.txt  README.md  acc.sh  bumptexture.sh  create_random_scene  curve.sh  final.sh  moving.sh  pt.sh  random.sh  random_scene  run_all.sh  run_all_test.sh  run_rt.sh  sponza.sh  sppm.sh  test_acc.sh  test_bump.sh  test_curve.sh  test_depth_of_filed.sh  test_medium.sh  test_pt.sh  test_sppm.sh  test_texture.sh  texture.sh
include/: box.hpp  bvh.hpp  camera.hpp  curve.hpp  diffusematerial.hpp  group.hpp  hit.hpp  integrator.hpp  kdtree.hpp  material.hpp  medium.hpp  mesh.hpp  object3d.hpp  photonkdtree.hpp  plane.hpp  pt.hpp  pt_and_sppm.hpp  ray.hpp  rectangles.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  texture.h  transform.hpp  triangle.hpp
sponza/: s.txt  sppm.txt
src/: generate_random.cpp  main.cpp  mesh.cpp  scene_parser.cpp  texture.cpp
testcases/: bump.txt  bumptexture.txt  con_box.txt  con_box_test.txt  cornell_box.txt  curve.txt  final.txt  green_rabit.txt  medium.txt  moving.txt  pt_scene.txt  random.txt  random_scene.txt  small_fog.txt  small_pt_rec.txt  small_rabit.txt  smallpt.txt  test_bump.txt  test_curve.txt  texture.txt
